crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__binary_download_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async download(id: string): Promise<Blob> {
    const response = await fetch(`${baseUrl}/api/doc/${id}`, {
      method: "GET",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return await response.blob();
  },
};
