crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__binary_download_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

export interface Handlers {
  download(id: string): Promise<Buffer>;
}
