crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__binary_download_server.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.get(
    "/api/doc/:id",
    async (req: Request<{ id: string }>, res: Response) => {
      try {
        const id = req.params.id;
        const result = await handlers.download(id);
        res.setHeader("Content-Type", "application/octet-stream");
        res.send(result);
      } catch {
        res.status(500).json({ error: "Internal Server Error" });
      }
    },
  );

  return router;
}
