crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__body_no_response_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { SubmitFeedbackBody } from "./types";

export interface Handlers {
  submitFeedback(body: SubmitFeedbackBody): Promise<void>;
}
