crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__body_pick_only_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { UpdateEmailBody, User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async updateEmail(id: string, body: UpdateEmailBody): Promise<User> {
    const response = await fetch(`${baseUrl}/api/users/${id}/email`, {
      method: "PATCH",
      headers: { "Content-Type": "application/json" },
      body: JSON.stringify(body),
    });
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User;
  },
};
