crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__cursor_pagination_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { ListPostsPage } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async listPosts(opts: {
    cursor?: string | undefined;
    limit: number;
  }): Promise<ListPostsPage> {
    const params = new URLSearchParams();
    if (opts.cursor !== undefined) params.set("cursor", String(opts.cursor));
    params.set("limit", String(opts.limit));
    const query = params.toString();
    const response = await fetch(
      `${baseUrl}/api/posts${query ? `?${query}` : ""}`,
      {
        method: "GET",
      },
    );
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as ListPostsPage;
  },
};
