crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__cursor_pagination_handlers.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { ListPostsPage } from "./types";

export interface Handlers {
  listPosts(query: {
    cursor?: string | undefined;
    limit: number;
  }): Promise<ListPostsPage>;
}
