crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__cursor_pagination_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface Post {
  id: number;
  title: string;
}

export interface ListPostsPage {
  items: Post[];
  nextCursor?: string;
}
