crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__doc_comments_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { CreateUserBody, User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  /** Create a new user */
  async createUser(body: CreateUserBody): Promise<User> {
    const response = await fetch(`${baseUrl}/api/users`, {
      method: "POST",
      headers: { "Content-Type": "application/json" },
      body: JSON.stringify(body),
    });
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User;
  },
};
