crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__doc_comments_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { CreateUserBody, User } from "./types";

export interface Handlers {
  /** Create a new user */
  createUser(body: CreateUserBody): Promise<User>;
}
